noinst_LIBRARIES = libtrs.a

libtrs_a_SOURCES = trsapi.c trserror.c trsread.c
libtrs_a_CFLAGS=-I$(srcdir)/../include

# here you should add all header files, which contains the functionality
# of your shared lib (published for the users)
include_HEADERS =

# here you should add all header files, which shouldn't be installed
noinst_HEADERS =

#CFLAGS += @DEBUG@ 
#CXXFLAGS += @DEBUG@

