lib_LTLIBRARIES=libcxcore.la

libcxcore_la_SOURCES = \
     cxalloc.cpp     \
     cxarithm.cpp     \
     cxarray.cpp     \
     cxcmp.cpp     \
     cxconvert.cpp     \
     cxcopy.cpp     \
     cxdatastructs.cpp     \
     cxdrawing.cpp     \
     cxdxt.cpp     \
     cxerror.cpp     \
     cxjacobieigens.cpp     \
     cxlogic.cpp     \
     cxmathfuncs.cpp     \
     cxmatmul.cpp     \
     cxmatrix.cpp     \
     cxmean.cpp     \
     cxmeansdv.cpp     \
     cxminmaxloc.cpp     \
     cxnorm.cpp     \
     cxouttext.cpp     \
     cxpersistence.cpp     \
     cxprecomp.cpp     \
     cxrand.cpp     \
     cxsumpixels.cpp     \
     cxsvd.cpp     \
     cxswitcher.cpp     \
     cxtables.cpp	\
     cxutils.cpp

# here you should add all header files, which shouldn't be installed
noinst_HEADERS =

EXTRA_DIST = _cxcore.h _cxexport.def _cxipp.h

LIBS = -lm -ldl

AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/../include
